--- a/final/index.html
+++ b/final/index.html
@@ -75,6 +75,7 @@
         <!-- Content -->
         <div class="trending-content Swiper">
             <div class="swiper-wrapper">
+                <!-- Slide1 -->
                 <div class="swiper-slide">
                     <div class="box">
                         <img src="img/trending1.webp" alt="">
@@ -86,16 +87,265 @@
                                     <i class='bx bxs-star'></i>
                                     <span>4.7</span>
                                 </div>
-                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt' ></i></a>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
-              </div>
+                <!-- Slide2 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="img/trending2.jpg" alt="">
+                        <div class="box-text">
+                            <h2>Battlefield 2042</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide3 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="img/trending3.jpg" alt="">
+                        <div class="box-text">
+                            <h2>Assassin's Creed</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide4 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="img/trending4.jpg" alt="">
+                        <div class="box-text">
+                            <h2>Ghost Of Tsushima</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide5 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="img/trending5.png" alt="">
+                        <div class="box-text">
+                            <h2>GTA V</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide6 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="img/trending6.jpg" alt="">
+                        <div class="box-text">
+                            <h2>Dying Light 2</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide7 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="img/trending7.png" alt="">
+                        <div class="box-text">
+                            <h2>Halo Infinite</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide8 -->
+                <div class="swiper-slide">
+                    <div class="box">
+                        <img src="img/trending8.png" alt="">
+                        <div class="box-text">
+                            <h2>Resident Evil Village</h2>
+                            <h3>Action</h3>
+                            <div class="rating-download">
+                                <div class="rating">
+                                    <i class='bx bxs-star'></i>
+                                    <span>4.7</span>
+                                </div>
+                                <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Trending Section End -->
+    <!-- New Section Start -->
+    <section class="new container" id="new">
+        <div class="heading">
+            <i class='bx bx-game'></i>
+            <h2>New Games</h2>
+        </div>
+        <div class="new-content">
+            <!-- Box1 -->
+            <div class="box">
+                <img src="img/new1.jpg" alt="">
+                <div class="box-text">
+                    <h2>Subway Surfers</h2>
+                    <h3>Fun/Entertainment</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- Box2 -->
+            <div class="box">
+                <img src="img/new2.jpg" alt="">
+                <div class="box-text">
+                    <h2>Call Of Duty</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- Box3 -->
+            <div class="box">
+                <img src="img/new3.jpg" alt="">
+                <div class="box-text">
+                    <h2>Frer guy</h2>
+                    <h3>Action/Entertainment</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- Box4 -->
+            <div class="box">
+                <img src="img/new4.jpg" alt="">
+                <div class="box-text">
+                    <h2>Clash Royale</h2>
+                    <h3>War/Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- Box5 -->
+            <div class="box">
+                <img src="img/new5.png" alt="">
+                <div class="box-text">
+                    <h2>MineCraft</h2>
+                    <h3>Fun/Entertainment</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- Box6 -->
+            <div class="box">
+                <img src="img/new6.png" alt="">
+                <div class="box-text">
+                    <h2>PUB G</h2>
+                    <h3>Action/Survival</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- Box7 -->
+            <div class="box">
+                <img src="img/new7.png" alt="">
+                <div class="box-text">
+                    <h2>Fortnite</h2>
+                    <h3>Action/Survival</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- Box8 -->
+            <div class="box">
+                <img src="img/new8.jpg" alt="">
+                <div class="box-text">
+                    <h2>Contest Of Champions</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </section>
+    <!-- New Section End -->
 
 
 
