Updated version Of Movie Website

--- a/final/index.html
+++ b/final/index.html
@@ -17,6 +17,12 @@
 </head>
 
 <body>
+    <!-- Custom Scroll bar -->
+    <div class="progress">
+        <div class="progress-bar" id="scroll-bar">
+            
+        </div>
+    </div>
     <!-- Header -->
     <header>
         <!-- Nav -->
@@ -221,23 +227,24 @@
             <i class='bx bx-game'></i>
             <h2>New Games</h2>
         </div>
+        <!-- content -->
         <div class="new-content">
-            <!-- Box1 -->
+            <!-- Box 1 -->
             <div class="box">
                 <img src="img/new1.jpg" alt="">
                 <div class="box-text">
                     <h2>Subway Surfers</h2>
-                    <h3>Fun/Entertainment</h3>
+                    <h3>Action</h3>
                     <div class="rating-download">
                         <div class="rating">
                             <i class='bx bxs-star'></i>
                             <span>4.7</span>
                         </div>
-                        <a href="#" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
+                        <a href="download.html" class="box-btn"><i class='bx bx-down-arrow-alt'></i></a>
                     </div>
                 </div>
             </div>
-            <!-- Box2 -->
+            <!-- Box 2 -->
             <div class="box">
                 <img src="img/new2.jpg" alt="">
                 <div class="box-text">
@@ -252,12 +259,12 @@
                     </div>
                 </div>
             </div>
-            <!-- Box3 -->
+            <!-- Box 3 -->
             <div class="box">
                 <img src="img/new3.jpg" alt="">
                 <div class="box-text">
-                    <h2>Frer guy</h2>
-                    <h3>Action/Entertainment</h3>
+                    <h2>Free Guy</h2>
+                    <h3>Action</h3>
                     <div class="rating-download">
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -267,12 +274,12 @@
                     </div>
                 </div>
             </div>
-            <!-- Box4 -->
+            <!-- Box 4 -->
             <div class="box">
                 <img src="img/new4.jpg" alt="">
                 <div class="box-text">
                     <h2>Clash Royale</h2>
-                    <h3>War/Action</h3>
+                    <h3>Action</h3>
                     <div class="rating-download">
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -282,12 +289,12 @@
                     </div>
                 </div>
             </div>
-            <!-- Box5 -->
+            <!-- Box 5 -->
             <div class="box">
                 <img src="img/new5.png" alt="">
                 <div class="box-text">
-                    <h2>MineCraft</h2>
-                    <h3>Fun/Entertainment</h3>
+                    <h2>Minecraft</h2>
+                    <h3>Action</h3>
                     <div class="rating-download">
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -297,12 +304,12 @@
                     </div>
                 </div>
             </div>
-            <!-- Box6 -->
+            <!-- Box 6 -->
             <div class="box">
                 <img src="img/new6.png" alt="">
                 <div class="box-text">
                     <h2>PUB G</h2>
-                    <h3>Action/Survival</h3>
+                    <h3>Action</h3>
                     <div class="rating-download">
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -312,12 +319,12 @@
                     </div>
                 </div>
             </div>
-            <!-- Box7 -->
+            <!-- Box 7 -->
             <div class="box">
                 <img src="img/new7.png" alt="">
                 <div class="box-text">
                     <h2>Fortnite</h2>
-                    <h3>Action/Survival</h3>
+                    <h3>Action</h3>
                     <div class="rating-download">
                         <div class="rating">
                             <i class='bx bxs-star'></i>
@@ -327,7 +334,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Box8 -->
+            <!-- Box 8 -->
             <div class="box">
                 <img src="img/new8.jpg" alt="">
                 <div class="box-text">
@@ -342,10 +349,30 @@
                     </div>
                 </div>
             </div>
-
+        </div>
+        <div class="next-page">
+            <a href="#">Next Page</a>
         </div>
     </section>
     <!-- New Section End -->
+   <!-- copyright -->
+   <div class="copyright container">
+    <a href="#" class="logo">Game<span>Store</span></a>
+    <p>&#169; All Rights Reserved</p>
+   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
