--- a/movie-website-master/index.html
+++ b/movie-website-master/index.html
@@ -10,12 +10,16 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <title>Movie Design</title>
+    <!-- Box Icons -->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Swiper CSS File Link -->
+    <link rel="stylesheet" href="swiper-bundle.min.css">
 </head>
 <body>
     <div class="navbar">
         <div class="navbar-container">
             <div class="logo-container">
-                <h1 class="logo">flakes</h1>
+                <h1 class="logo">Flakes</h1>
             </div>
             <div class="menu-container">
                 <ul class="menu-list">
