--- a/movie-website-master/final/download.html
+++ b/movie-website-master/final/download.html
@@ -41,32 +41,49 @@
             </div>
             <!-- Menu -->
             <div class="menu">
-                <img src="img/menu.png" alt="">
+                <img src="images/menuimg.png" alt="">
                 <div class="navbar">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#trending">Trending</a></li>
-                    <li><a href="#new">New Games</a></li>
-                    <li><a href="#action">Action Games</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="#trending">Trending Movies</a></li>
+                    <li><a href="#new">New Movies</a></li>
+                    <li><a href="#highestrated">Highest Rated</a></li>
+                    <li><a href="#youractivity">Your Activity</a></li>
                 </div>
             </div>
             <!-- Notifictaion -->
             <div class="notification">
                 <div class="notification-box">
                     <i class='bx bxs-check-circle'></i>
-                    <p>Game download is successful.</p>
+                    <p>Minions is added to your activity.</p>
                 </div>
                 <div class="notification-box box-color">
                     <i class='bx bxs-x-circle'></i>
-                    <p>Could not apply charges.</p>
+                    <p>The Avengers is still pending in your watchlist.</p>
                 </div>
             </div>
         </div>
     </header>
     <!-- Video -->
-    <div class="video-container container">
-        <h2>Trailer</h2>
-        <video src="images/trailer1.mp4" muted autoplay></video>
+    <div class="boxed container">
+        <div class="video-container">
+            <h2>Trailer</h2>
+            <video src="images/trailer1.mp4" muted autoplay></video>
+            <div class="info">
+                <div class="genre">
+                    <h3>Genre: </h3>
+                    <span>Mystery/Thriller</span>
+                </div>
+                <div class="rate">
+                    <h3>Rating: </h3>
+                    <i class='bx bxs-star'></i>
+                    <span>8.6</span>
+                </div>
+                <div class="actors">
+                    <h3>Actors: </h3>
+                    <span>Anthony Hopkins, Jodie Foster, Ted Levine, Frank Seals Jr., Brooke Smith</span>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- About -->
     <div class="about container">
@@ -86,28 +103,17 @@
     <div class="download">
         <h2>Download Links</h2>
         <div class="download-links">
-            <a href="download-files/Subway Surface.apk" download="">720p</a>
-            <a href="#">1080p</a>
-            <a href="#">4K</a>
+            <a href="images/trailer1.mp4" download="">720p</a>
+            <a href="images/trailer1.mp4">1080p</a>
+            <a href="images/trailer1.mp4">4K</a>
         </div>
     </div>
     
    <!-- copyright -->
    <div class="copyright container">
-    <a href="#" class="logo">FLA<span>KES</span></a>
+    <a href="index.html" class="logo">FLA<span>KES</span></a>
     <p>&#169; FLAKES All Rights Reserved</p>
    </div>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
