--- a/movie-website-master/final/new.html
+++ b/movie-website-master/final/new.html
@@ -65,155 +65,7 @@
         </div>
     </header>
   
-    <!-- Trending Section Start -->
-    <section class="trending container" id="trending">
-        <div class="heading">
-            <i class='bx bxs-flame'></i>
-            <h2>Trending Movies</h2>
-        </div>
-        <!-- Content -->
-        <div class="trending-content Swiper">
-            <div class="swiper-wrapper">
-                <!-- Slide1 -->
-                <div class="swiper-slide">
-                    <div class="box">
-                        <img src="images/1.jpg" alt="">
-                        <div class="box-text">
-                            <h2>Inception</h2>
-                            <h3>Action</h3>
-                            <div class="rating-download">
-                                <div class="rating">
-                                    <i class='bx bxs-star'></i>
-                                    <span>4.7</span>
-                                </div>
-                                <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Slide2 -->
-                <div class="swiper-slide">
-                    <div class="box">
-                        <img src="images/2.jpg" alt="">
-                        <div class="box-text">
-                            <h2>Superman: The Movie</h2>
-                            <h3>Action</h3>
-                            <div class="rating-download">
-                                <div class="rating">
-                                    <i class='bx bxs-star'></i>
-                                    <span>4.7</span>
-                                </div>
-                                <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Slide3 -->
-                <div class="swiper-slide">
-                    <div class="box">
-                        <img src="images/3.webp" alt="">
-                        <div class="box-text">
-                            <h2>The Incredibles</h2>
-                            <h3>Action</h3>
-                            <div class="rating-download">
-                                <div class="rating">
-                                    <i class='bx bxs-star'></i>
-                                    <span>4.7</span>
-                                </div>
-                                <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Slide4 -->
-                <div class="swiper-slide">
-                    <div class="box">
-                        <img src="images/4.jpeg" alt="">
-                        <div class="box-text">
-                            <h2>Hugo</h2>
-                            <h3>Action</h3>
-                            <div class="rating-download">
-                                <div class="rating">
-                                    <i class='bx bxs-star'></i>
-                                    <span>4.7</span>
-                                </div>
-                                <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Slide5 -->
-                <div class="swiper-slide">
-                    <div class="box">
-                        <img src="images/5.jpg" alt="">
-                        <div class="box-text">
-                            <h2>Mary Poppins</h2>
-                            <h3>Action</h3>
-                            <div class="rating-download">
-                                <div class="rating">
-                                    <i class='bx bxs-star'></i>
-                                    <span>4.7</span>
-                                </div>
-                                <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Slide6 -->
-                <div class="swiper-slide">
-                    <div class="box">
-                        <img src="images/6.jpg" alt="">
-                        <div class="box-text">
-                            <h2>Avatar</h2>
-                            <h3>Action</h3>
-                            <div class="rating-download">
-                                <div class="rating">
-                                    <i class='bx bxs-star'></i>
-                                    <span>4.7</span>
-                                </div>
-                                <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Slide7 -->
-                <div class="swiper-slide">
-                    <div class="box">
-                        <img src="images/7.jpg" alt="">
-                        <div class="box-text">
-                            <h2>Barfi</h2>
-                            <h3>Action</h3>
-                            <div class="rating-download">
-                                <div class="rating">
-                                    <i class='bx bxs-star'></i>
-                                    <span>4.7</span>
-                                </div>
-                                <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Slide8 -->
-                <div class="swiper-slide">
-                    <div class="box">
-                        <img src="images/8.jpg" alt="">
-                        <div class="box-text">
-                            <h2>The Hangover</h2>
-                            <h3>Action</h3>
-                            <div class="rating-download">
-                                <div class="rating">
-                                    <i class='bx bxs-star'></i>
-                                    <span>4.7</span>
-                                </div>
-                                <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Trending Section End -->
+  
     <!-- New Section Start -->
     <section class="new container" id="new">
         <div class="heading">
@@ -342,15 +194,192 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="more">
-            <a href="new.html">See More</a>
+             <!-- Box 9 -->
+             <div class="box">
+                <img src="images/17.jpg" alt="">
+                <div class="box-text">
+                    <h2>Black Panther</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 10 -->
+             <div class="box">
+                <img src="images/18.jpg" alt="">
+                <div class="box-text">
+                    <h2>The Shawshank Redemption</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 11 -->
+             <div class="box">
+                <img src="images/19.jpg" alt="">
+                <div class="box-text">
+                    <h2>Dawn Of The Dead</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 12 -->
+             <div class="box">
+                <img src="images/20.webp" alt="">
+                <div class="box-text">
+                    <h2>The Suicide Squad</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 13 -->
+             <div class="box">
+                <img src="images/21.jpg" alt="">
+                <div class="box-text">
+                    <h2>127 Hours</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 14 -->
+             <div class="box">
+                <img src="images/22.jpg" alt="">
+                <div class="box-text">
+                    <h2>Kill Bill</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 15 -->
+             <div class="box">
+                <img src="images/23.jpg" alt="">
+                <div class="box-text">
+                    <h2>The Wizard Of Oz</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 16 -->
+             <div class="box">
+                <img src="images/24.jpg" alt="">
+                <div class="box-text">
+                    <h2>The Green Knight</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 17 -->
+             <div class="box">
+                <img src="images/25.jpg" alt="">
+                <div class="box-text">
+                    <h2>A Star is Born</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 18 -->
+             <div class="box">
+                <img src="images/26.jpg" alt="">
+                <div class="box-text">
+                    <h2>The Usual Suspect</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 19 -->
+             <div class="box">
+                <img src="images/27.jpg" alt="">
+                <div class="box-text">
+                    <h2>Inglorious Basterds</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
+             <!-- Box 20 -->
+             <div class="box">
+                <img src="images/28.webp" alt="">
+                <div class="box-text">
+                    <h2>Arrival</h2>
+                    <h3>Action</h3>
+                    <div class="rating-download">
+                        <div class="rating">
+                            <i class='bx bxs-star'></i>
+                            <span>4.7</span>
+                        </div>
+                        <a href="#" class="box-btn"><i class='bx bx-play'></i></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- New Section End -->
    <!-- copyright -->
    <div class="copyright container">
-    <a href="#" class="logo">FLA<span>KES</span></a>
+    <a href="index.html" class="logo">FLA<span>KES</span></a>
     <p>&#169; FLAKES All Rights Reserved</p>
    </div>
 
@@ -358,6 +387,8 @@
 
 
 
+
+   
 
 
     <!-- Link To Swiper File -->
