--- a/movie-website-master/final/index.html
+++ b/movie-website-master/final/index.html
@@ -46,7 +46,7 @@
                 <div class="navbar">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#trending">Trending Movies</a></li>
-                    <li><a href="#new">New Movies</a></li>
+                    <li><a href="new.html">New Movies</a></li>
                     <li><a href="#highestrated">Highest Rated</a></li>
                     <li><a href="#youractivity">Your Activity</a></li>
                 </div>
