--- a/movie-website-master/final/new.html
+++ b/movie-website-master/final/new.html
@@ -45,7 +45,7 @@
                 <img src="images/menuimg.png" alt="">
                 <div class="navbar">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#trending">Trending Movies</a></li>
+                    <li><a href="index.html#trending">Trending Movies</a></li>
                     <li><a href="#new">New Movies</a></li>
                     <li><a href="#highestrated">Highest Rated</a></li>
                     <li><a href="#youractivity">Your Activity</a></li>
