--- a/movie-website-master/final/index.html
+++ b/movie-website-master/final/index.html
@@ -21,7 +21,7 @@
     <!-- Custom Scroll bar -->
     <div class="progress">
         <div class="progress-bar" id="scroll-bar">
-            
+
         </div>
     </div>
     <!-- Header -->
@@ -45,7 +45,7 @@
                 <img src="images/menuimg.png" alt="">
                 <div class="navbar">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#trending">Trending Movies</a></li>
+                    <li><a href="index.html">Trending Movies</a></li>
                     <li><a href="new.html">New Movies</a></li>
                     <li><a href="#highestrated">Highest Rated</a></li>
                     <li><a href="#youractivity">Your Activity</a></li>
@@ -64,7 +64,7 @@
             </div>
         </div>
     </header>
-  
+
     <!-- Trending Section Start -->
     <section class="trending container" id="trending">
         <div class="heading">
@@ -348,11 +348,11 @@
         </div>
     </section>
     <!-- New Section End -->
-   <!-- copyright -->
-   <div class="copyright container">
-    <a href="#" class="logo">FLA<span>KES</span></a>
-    <p>&#169; FLAKES All Rights Reserved</p>
-   </div>
+    <!-- copyright -->
+    <div class="copyright container">
+        <a href="#" class="logo">FLA<span>KES</span></a>
+        <p>&#169; FLAKES All Rights Reserved</p>
+    </div>
 
 
 
